--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'io.insert-koin:koin-android:3.1.5'
     implementation 'io.insert-koin:koin-android-ext:3.0.2'
 
-    // Room database
+    // Room database https://developer.android.com/training/data-storage/room
     implementation 'androidx.room:room-ktx:2.4.1'
     implementation 'androidx.room:room-runtime:2.4.1'
     kapt 'androidx.room:room-compiler:2.4.1'
